--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -16,7 +16,10 @@
 \input{2Appendix/SoundPerception.tex}
 \input{2Appendix/Distortion.tex}
 %% Et afsnit %%
+
 \input{2Appendix/IEC6964}
+
+\input{2Appendix/IIRFilter.tex}
 
 \input{2Appendix/FIRTheory}
 
