--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -138,6 +138,7 @@
 
 % \renewcommand{\thesection}{\Alph{section}}
  \setcounter{section}{0}
+ \addtocontents{toc}{\protect\setcounter{tocdepth}{0}} 
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
